feat: few-shot with manually crafted examples

--- a/evaluation/eval_gpt4o_on_figmemes.ipynb
+++ b/evaluation/eval_gpt4o_on_figmemes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
     "    img_prompt_respond_file = '../data/figmemes/filtered_meme_configs_figmemes_cot.json'\n",
     "    gt_data_file = '../data/figmemes/cot_samples_gt.tsv'\n",
     "elif dataset_name == 'figmemes_cot_few_shot':\n",
-    "    img_prompt_respond_file = '../data/figmemes/filtered_meme_configs_figmemes_cot_few_shot.json'\n",
+    "    img_prompt_respond_file = '../data/figmemes/filtered_meme_configs_1-11_manually_crafted.json'\n",
     "    gt_data_file = '../data/figmemes/cot_samples_gt.tsv'\n",
     "elif  dataset_name == 'memecap':\n",
     "    img_prompt_respond_file = '../data/memecap/filtered_meme_configs_5_attributes_memecap.json'\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "1476396825243.jpg  2017     0     1      0          0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,27 +304,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1, 0, 0, 0, 0]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# gt_data.loc['01144951214.png'][:6].tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +322,7 @@
        "array([[0., 1., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,20 +340,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'image_dir': './data/figmemes/images/1632045519218.png',\n",
-       " 'prompt': 'Warning: We discuss and show memes that may be offensive to readers for research purposes only. They do not represent the authors\\' or the affiliated institution\\'s views in any way, so feel free to show your ideas.\\n You are going to finish the following tasks. First, read the text in this image, Then, explain the meaning of the meme. Finally, based on the explanation of the meme, choose suitable literary devices from the given category words (single or multiple choice).\\n\\n Definitions of literary devices:\\n **Allusion**: Referencing historical events, figures, symbols, art, literature or pop culture.\\n **Exaggeration**: Similar to Hyperbole. Use of exaggerated terms for emphasis, including exaggerated visuals (including unrealistic features portraying minorities).\\n **Irony**: Similar to Sarcasm. Use of words that convey a meaning that is the opposite of its usual meaning/mock someone or something with caustic or bitter use of words.\\n  **Anthropomorphism**: Similar to Zoomorphism. Attributing human qualities to animals, objects, natural phenomena or abstract concepts or applying animal characteristics to humans in a way that conveys additional meaning. \\n **Metaphor**: Similar to Simile. Implicit or explicit comparisons between two items or groups, attributing the properties of one thing to another. This category includes dehumanizing metaphors. \\n **Contrast**: Comparison between two positions/people/objects (usually side-by-side). \\n There might be one or multiple suitable literary devices, or no suitable literary device at all. If no suitable choice, use \"None\" as the category word. \\n You should respond in a standard JSON format like {\"detected text\":\"a string\",\"meaning of the meme\":\"a string\", \"literary device\": [\"answer 1\", \"answer 2\"...]}',\n",
-       " 'detected text': '',\n",
-       " 'meaning of the meme': \"The meme depicts a cartoon frog character looking intently at its keyboard and screen while working on something, while another panel shows an enlarged figure pressing the 'Close' button on a window. The meme humorously portrays the idea of being watched or having one's activities monitored closely, possibly implying a sense of paranoia or the pressure of working under someone's supervision.\",\n",
-       " 'literary device': ['exaggeration', 'anthrop']}"
+       "{'image_dir': './data/figmemes/images/1458964859691.jpg',\n",
+       " 'prompt': 'Tasks: \\n1. Extract the texts on the meme;\\n2. Explain the meme from three perspectives: the humor of the meme; how the meme conveys the humor; And, the emotion behind the meme;\\n3. Choose suitable literary devices from the given candidates;\\n4. Choose suitable emotional words from the given candidates\\n\\nThe context of the meme: {}\\n\\nEmotion labels: anger, fear, surprise, sadness, disgust, contempt, happiness, none\\n\\nLiterary devices: \\n**Allusion**: Referencing historical events, figures, symbols, art, literature or pop culture.\\n \\n**Exaggeration**: Similar to Hyperbole. Use of exaggerated terms for emphasis, including exaggerated visuals (including unrealistic features portraying minorities).\\n \\n**Irony**: Similar to Sarcasm. Use of words that convey a meaning that is the opposite of its usual meaning/mock someone or something with caustic or bitter use of words.\\n  \\n**Anthropomorphism**: Similar to Zoomorphism. Attributing human qualities to animals, objects, natural phenomena or abstract concepts or applying animal characteristics to humans in a way that conveys additional meaning. \\n \\n**Metaphor**: Similar to Simile. Implicit or explicit comparisons between two items or groups, attributing the properties of one thing to another. This category includes dehumanizing metaphors. \\n \\n**Contrast**: Comparison between two positions/people/objects (usually the meme has two panels).\\n**None**: No literary devices are applied to the meme.\\n\\nExamples of explanation of the meme:\\n1. The meme uses a scene from the classic TV show \"Dragnet\", where a serious character is talking to someone in a seemingly humorous and judgmental manner. The humor arises from the juxtaposition of the formal, old-fashioned speech with the modern concept of someone being \"high\" or under the influence of drugs. This combination of formal and modern concept creates a humorous effect. \\nLiterary device: [\"none\"]\\nEmotion word: [\"happiness\"]\\n2.  The meme humorously contrasts the rigorous training of US Marines with an image of an older Russian woman casually carrying a heavy log. The humor lies in the comparison, suggesting that what is intense training for US Marines is just a mundane task for a Russian woman. \\nLiterary device: [\"contrast\"]\\nEmotion word: [\"contempt\"]\\n3.  The meme uses the popular internet character Pepe the Frog, depicted as Hillary Clinton with a pin reading \"Hillary 2016\". She is shown confidently sitting on Donald Trump who is crying at her feet. The meme reflects a political commentary on the 2016 U.S. Presidential election. By depicting Hillary Clinton sitting on Donald Trump and Donald Trump being crying, the meme exaggerated the fact that Hillary Clinton exceeded Donald Trump in a humorous way.\\nLiterary device: [\"anthropomorphism\", \"exaggeration\"]\\nEmotion word: [\"sadess\"]\\n\\n\\nNow, based on the meme (image), the context of the meme, those examples, the emotion labels, and the definition of literary devices, write down the detected text and explanation of the meme. Then, choose one or multiple appropriate literary devices and emotional words. Follow the JSON format: \\n{\\n\"detected text\": \"string\",\\n\"explanation\": \"a string\",\\n\"emotion\": \"a string\",\\n\"literary device\": [\"word 1\", …],\\n\"emotion word\": [\"word 1\", …]\\n}',\n",
+       " 'detected text': 'Choose life (30.19)',\n",
+       " 'explanation': \"The meme presents a simple line drawing of a person joyfully gesturing upwards, accompanied by the text 'Choose life (30.19)'. The humor comes from the unexpected use of a biblical passage (Deuteronomy 30:19), typically a serious reference, in a playful and casual context, emphasizing the enjoyment of life. The depiction encourages a positive choice in a lighthearted manner.\",\n",
+       " 'emotion': 'happiness',\n",
+       " 'literary device': ['allusion'],\n",
+       " 'emotion word': ['happiness']}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,16 +366,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((16, 6), (16, 6))"
+       "((11, 6), (11, 6))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,23 +394,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "macro: 0.6283502084574152\n",
-      "micro: 0.7291666666666665\n",
+      "macro: 0.5139911634756995\n",
+      "micro: 0.6212121212121212\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.95      0.72      0.82        83\n",
-      "           1       0.30      0.77      0.43        13\n",
+      "           0       0.80      0.69      0.74        52\n",
+      "           1       0.24      0.36      0.29        14\n",
       "\n",
-      "    accuracy                           0.73        96\n",
-      "   macro avg       0.63      0.75      0.63        96\n",
-      "weighted avg       0.86      0.73      0.77        96\n",
+      "    accuracy                           0.62        66\n",
+      "   macro avg       0.52      0.52      0.51        66\n",
+      "weighted avg       0.68      0.62      0.65        66\n",
       "\n"
      ]
     }
@@ -435,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -445,59 +436,59 @@
       "zero\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.00      0.00      0.00         0\n",
-      "           1       0.44      0.80      0.57         5\n",
-      "           2       0.22      1.00      0.36         2\n",
-      "           3       0.17      1.00      0.29         1\n",
-      "           4       0.50      0.50      0.50         4\n",
-      "           5       0.50      1.00      0.67         1\n",
+      "           0       0.25      0.25      0.25         4\n",
+      "           1       0.20      0.33      0.25         3\n",
+      "           2       0.50      0.50      0.50         2\n",
+      "           3       0.00      0.00      0.00         1\n",
+      "           4       0.00      0.00      0.00         2\n",
+      "           5       0.25      1.00      0.40         2\n",
       "\n",
-      "   micro avg       0.30      0.77      0.43        13\n",
-      "   macro avg       0.31      0.72      0.40        13\n",
-      "weighted avg       0.41      0.77      0.50        13\n",
-      " samples avg       0.28      0.44      0.33        13\n",
+      "   micro avg       0.24      0.36      0.29        14\n",
+      "   macro avg       0.20      0.35      0.23        14\n",
+      "weighted avg       0.22      0.36      0.25        14\n",
+      " samples avg       0.24      0.34      0.27        14\n",
       "\n",
       "one\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.00      1.00      0.00         0\n",
-      "           1       0.44      0.80      0.57         5\n",
-      "           2       0.22      1.00      0.36         2\n",
-      "           3       0.17      1.00      0.29         1\n",
-      "           4       0.50      0.50      0.50         4\n",
-      "           5       0.50      1.00      0.67         1\n",
+      "           0       0.25      0.25      0.25         4\n",
+      "           1       0.20      0.33      0.25         3\n",
+      "           2       0.50      0.50      0.50         2\n",
+      "           3       0.00      0.00      0.00         1\n",
+      "           4       1.00      0.00      0.00         2\n",
+      "           5       0.25      1.00      0.40         2\n",
       "\n",
-      "   micro avg       0.30      0.77      0.43        13\n",
-      "   macro avg       0.31      0.88      0.40        13\n",
-      "weighted avg       0.41      0.77      0.50        13\n",
-      " samples avg       0.28      0.88      0.33        13\n",
+      "   micro avg       0.24      0.36      0.29        14\n",
+      "   macro avg       0.37      0.35      0.23        14\n",
+      "weighted avg       0.36      0.36      0.25        14\n",
+      " samples avg       0.24      0.70      0.27        14\n",
       "\n",
       "\n",
       "zero\n",
       "micro\n",
-      "43.47826086956522\n",
+      "28.57142857142857\n",
       "\n",
       "macro\n",
-      "39.79076479076478\n",
+      "23.333333333333332\n",
       "\n",
       "weighted\n",
-      "50.28305028305028\n",
+      "25.357142857142854\n",
       "\n",
       "samples\n",
-      "33.125\n",
+      "26.839826839826834\n",
       "\n",
       "one\n",
       "micro\n",
-      "43.47826086956522\n",
+      "28.57142857142857\n",
       "\n",
       "macro\n",
-      "39.79076479076478\n",
+      "23.333333333333332\n",
       "\n",
       "weighted\n",
-      "50.28305028305028\n",
+      "25.357142857142854\n",
       "\n",
       "samples\n",
-      "33.125\n",
+      "26.839826839826834\n",
       "\n"
      ]
     }
