feat: test 27 literary device labels and generate meme captions

--- a/data_annotation/post_processing.ipynb
+++ b/data_annotation/post_processing.ipynb
@@ -1066,18 +1066,17 @@
     "number_of_mislabeled_samples = 0\n",
     "\n",
     "for idx in range(len(p_IC_DT_MC_LD_EW_img_prompt_respond)):\n",
-    "    ld = p_IC_DT_MC_LD_EW_img_prompt_respond[idx]['literary device'].lower()\n",
+    "    # ld = p_IC_DT_MC_LD_EW_img_prompt_respond[idx]['literary device'].lower()\n",
     "    ew = p_IC_DT_MC_LD_EW_img_prompt_respond[idx]['emotion word'].lower()\n",
     "    if (len(p_IC_DT_MC_LD_EW_img_prompt_respond[idx]['visual elaboration'].split()) >= 4 and \n",
-    "        len(p_IC_DT_MC_LD_EW_img_prompt_respond[idx]['meaning of the meme'].split()) >= 4 and \n",
-    "        ld in literary_device and \n",
-    "        ew in emotion_word):\n",
+    "        len(p_IC_DT_MC_LD_EW_img_prompt_respond[idx]['meaning of the meme'].split()) >= 4 and  \n",
+    "        ew in emotion_word): # ld in literary_device and\n",
     "        # p_IC_DT_MC_LD_EW_img_prompt_respond[idx].pop(\"respond\")\n",
     "        filtered_meme_configs_5_attributes.append(p_IC_DT_MC_LD_EW_img_prompt_respond[idx]) \n",
-    "    if not ld in literary_device or not ew in emotion_word:\n",
+    "    if  not ew in emotion_word: # not ld in literary_device or\n",
     "        number_of_mislabeled_samples += 1\n",
-    "    if not ld in literary_device:\n",
-    "        invalid_ld_labels.add(ld) \n",
+    "    # if not ld in literary_device:\n",
+    "    #     invalid_ld_labels.add(ld) \n",
     "    if not ew in emotion_word:\n",
     "        invalid_ew_labels.add(ew)\n",
     "         \n",
