--- a/data_annotation/post_processing_json.ipynb
+++ b/data_annotation/post_processing_json.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,20 @@
    "source": [
     "import re\n",
     "import json\n",
-    "correction_map = {'anthropomorphism':'anthrop', 'dehumanizing metaphor': 'metaphor'}\n",
+    "correction_map = {'sarcasm':'irony',  \n",
+    "                  'anthropomorphism':'anthrop',\n",
+    "                  'personification':'anthrop',\n",
+    "                  'paradox':'contrast',\n",
+    "                  'antithesis':'contrast',\n",
+    "                  'oxymoron':'contrast',\n",
+    "                  'simile': 'metaphor',\n",
+    "                  'dehumanizing metaphor': 'metaphor',\n",
+    "                  'parody': 'metaphor',\n",
+    "                  'amplification': 'exaggeration'\n",
+    "                  }\n",
+    "discared_list = ['none', \"anagram\", \"pun\", \"allegory\", \"alliteration\", \"analogy\", \n",
+    "                 \"antithesis\", \"chiasmus\", \"circumlocution\", \"euphemism\", \"imagery\", \n",
+    "                 \"onomatopoeia\", \"portmanteau\",  \"symbolism\", 'satire']\n",
     "\n",
     "counter = 0\n",
     "meme_annotations = []\n",
@@ -154,11 +167,17 @@
     "    x = re.sub(\"```.*\\n\", \"\", meme['respond'])\n",
     "    x = re.sub(\"```\", \"\", x)\n",
     "    x = x.strip()\n",
+    "    # Extra process for 3-step prompt\n",
+    "    x = re.sub(\"\\n\", \"\", x)\n",
+    "    pattern = r\"\\{(.*?)\\}\"  # Capturing group for anything between '{' and '}'\n",
+    "    match = re.findall(pattern, x)\n",
+    "    x = \"{\" + match[0] + \"}\"\n",
+    "\n",
     "    # print(x)\n",
     "    try:\n",
     "        y = json.loads(x)\n",
     "        if \"literary device\" in y.keys():\n",
-    "            y[\"literary device\"] = [device.lower() for device in y[\"literary device\"] if device.lower() != 'none']\n",
+    "            y[\"literary device\"] = [device.lower() for device in y[\"literary device\"] if device.lower() not in discared_list]\n",
     "            # y[\"literary device\"].remove('none')\n",
     "            valid = True\n",
     "            for idx in range(len(y['literary device'])):\n",
@@ -175,7 +194,8 @@
     "                counter += 1\n",
     "            else:\n",
     "                number_of_invalid_labels += 1\n",
-    "        \n",
+    "        # remove duplicated labels\n",
+    "        y[\"literary device\"] = list(set(y[\"literary device\"]))\n",
     "        new_meme_conf.update(y) # Merge two dictionaries\n",
     "        meme_annotations.append(new_meme_conf)\n",
     "    except:\n",
@@ -196,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
